@@ -5,10 +5,12 @@ import com.gobongbob.festamate.global.util.JwtAuthenticationEntryPoint;
 import com.gobongbob.festamate.global.util.TokenAuthenticationFilter;
 import com.gobongbob.festamate.global.util.TokenProvider;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -43,10 +45,53 @@ public class SecurityConfig {
                 .sessionManagement(sessionManagement ->
                         sessionManagement.sessionCreationPolicy(
                                 SessionCreationPolicy.STATELESS)) // 세션을 생성하지 않고, 토큰 기반 인증을 사용
-                .authorizeHttpRequests(authorize -> authorize // 요청에 대한 인증 및 인가 설정 시작
-                        .requestMatchers(CorsUtils::isPreFlightRequest)
-                        .permitAll() // Preflight 요청 허용 (OPTIONS 메서드)
-                        .anyRequest().permitAll() // 모든 요청 허용
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(CorsUtils::isPreFlightRequest).permitAll()
+
+                        // Swagger UI 관련 경로 허용 추가
+                        .requestMatchers(
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/v3/api-docs/**",
+                                "/v3/api-docs.yaml",
+                                "/swagger-resources/**",
+                                "/webjars/**",
+                                "/actuator/**"
+                        ).permitAll()
+
+                        // 비로그인 허용 경로
+                        .requestMatchers(
+                                "/api/auth/kakao",         // JWT 필요 없음
+                                "/api/auth/login",         // JWT 필요 없음
+                                "/api/auth/register/**",   // 회원가입 관련 전체 경로 (프로필 포함) JWT 필요 없음
+                                "/health",
+                                "/sentry",
+                                "/error",
+                                "/login/oauth2/**",
+                                "/test/**",
+                                "/api/auth/phone/**", // 인증번호 요청 및 확인
+                                "/api/check/student-card" // OCR 학생증 인증
+                        ).permitAll()
+
+                        // == 모임방 관련 경로 (HttpMethod 명시) ==
+                        .requestMatchers(HttpMethod.GET, "/api/rooms")
+                        .permitAll()       // 모임방 목록 조회 (GET) 허용
+                        .requestMatchers(HttpMethod.GET, "/api/rooms/{rooms_id}")
+                        .permitAll() // 모임방 상세 조회 (GET) 허용
+
+                        // == 관리자 API 경로 (ADMIN 권한 필요) ==
+                        .requestMatchers("/api/admin/**")
+                        .hasAuthority("ROLE_ADMIN") // "ROLE_ADMIN" 권한 필요
+
+                        // 로그인 + JWT 인증이 필요한 경로
+                        .requestMatchers(
+                                "/api/auth/members/profile", // 프로필 조회는 JWT 필요
+                                "/api/rooms",
+                                "/api/report/room/**"
+                        ).authenticated()
+
+                        // 나머지는 모두 인증 필요
+                        .anyRequest().authenticated()
                 )
                 .addFilterBefore(new TokenAuthenticationFilter(tokenProvider),
                         // JWT 토큰을 통해 인증된 사용자 정보 가져옴
@@ -62,11 +107,15 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // 모든 출처 허용 (*)
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        // 프론트 주소 명시 (credentials: true와 함께 쓰기 위해 * 안 됨)
+        configuration.setAllowedOrigins(List.of(
+                "https://festamate-web.vercel.app",
+                "http://localhost:5173",
+                "https://www.festamate.shop"
+        ));
 
-        // 모든 HTTP 메서드 허용 (*)
-        configuration.setAllowedMethods(Arrays.asList("*"));
+        // 사용할 HTTP 메서드 명시
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
         // 허용할 헤더 설정
         configuration.setAllowedHeaders(Arrays.asList(
@@ -78,7 +127,7 @@ public class SecurityConfig {
         ));
 
         // 인증 정보 포함 여부
-        configuration.setAllowCredentials(false);
+        configuration.setAllowCredentials(true);
 
         // CORS 캐싱 시간 설정 (초 단위)
         configuration.setMaxAge(3600L);
